--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   path: ^1.9.1
   logger: ^2.6.2
   flutter_riverpod: ^3.0.3
+  google_fonts: ^6.3.2
 
 
 dev_dependencies:
@@ -25,6 +26,7 @@ dev_dependencies:
 
   
   flutter_lints: ^5.0.0
+  riverpod_lint: ^3.0.3
 
 
 flutter:
